--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    Prueba de funcionamiento
-    
+    <div class="container">
+        <ul>
+            <ol><div class="category"><p>Task in Progress</p></div></ol>
+            <ol><div class="category"><p>Task Completed</p></div></ol>
+            <ol><div class="category"><p>Task Won't Do</p></div></ol>
+            <ol><div class="category"><p>Task To Do</p></div></ol>
+            <ol><div class="category"><p>Add new Task</p></div></ol>
+        </ul>
+    </div>
+
 </body>
+
 </html>
