--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tareas Organizadas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="container">
         <h1>Tareas para mantener organizado</h1>
-        
-        <div class="task in-progress">
-            <span class="task-icon">⏳</span>
-            <h2>Task in Progress</h2>
-            <span class="task-status">➔</span>
-        </div>
+        <div class="taskbackground">
+            <div class="task in-progress">
+                <span class="task-icon">⏳</span>
+                <h2>Task in Progress</h2>
+                <span class="task-status">➔</span>
 
+
+            </div>
+            <ul>
+                <li>asdasdasdas</li>
+                <li>asdasdasdas</li>
+                <li>asdasdasdas</li>
+            </ul>
+        </div>
         <div class="task completed">
             <span class="task-icon">✅</span>
             <h2>Task Completed</h2>
@@ -35,5 +44,5 @@
         </div>
     </div>
 </body>
-</html>
 
+</html>
