Acabado el prototipo de la interfaz, añadidas las listas de ejemplo

--- a/index.html
+++ b/index.html
@@ -11,36 +11,54 @@
 <body>
     <div class="container">
         <h1>Tareas para mantener organizado</h1>
-        <div class="taskbackground">
+        <div class="taskcontainer" id="In-Progress">
             <div class="task in-progress">
                 <span class="task-icon">⏳</span>
                 <h2>Task in Progress</h2>
                 <span class="task-status">➔</span>
-
-
             </div>
             <ul>
-                <li>asdasdasdas</li>
-                <li>asdasdasdas</li>
-                <li>asdasdasdas</li>
+                <li>Ejemplo</li>
+                <li>Ejemplo</li>
+                <li>Ejemplo</li>
             </ul>
         </div>
-        <div class="task completed">
-            <span class="task-icon">✅</span>
-            <h2>Task Completed</h2>
-            <span class="task-status">✔</span>
+        <div class="taskcontainer" id="Completed">
+            <div class="task completed">
+                <span class="task-icon">✅</span>
+                <h2>Task Completed</h2>
+                <span class="task-status">✔</span>
+            </div>
+            <ul>
+                <li>Ejemplo</li>
+                <li>Ejemplo</li>
+                <li>Ejemplo</li>
+            </ul>
+        </div>
+        <div class="taskcontainer" id="Wont-Do">
+            <div class="task wont-do">
+                <span class="task-icon">☕</span>
+                <h2>Task Won’t Do</h2>
+                <span class="task-status">✖</span>
+            </div>
+            <ul>
+                <li>Ejemplo</li>
+                <li>Ejemplo</li>
+                <li>Ejemplo</li>
+            </ul>
         </div>
 
-        <div class="task wont-do">
-            <span class="task-icon">☕</span>
-            <h2>Task Won’t Do</h2>
-            <span class="task-status">✖</span>
-        </div>
-
-        <div class="task to-do">
-            <span class="task-icon">📚</span>
-            <h2>Task To Do</h2>
-            <p>Work on a challenge on devChallenges.io, learn TypeScript.</p>
+        <div class="taskcontainer" id="To-Do">
+            <div class="task to-do">
+                <span class="task-icon">📚</span>
+                <h2>Task To Do</h2>
+                <p>Work on a challenge on devChallenges.io, learn TypeScript.</p>
+            </div>
+            <ul>
+                <li>Ejemplo</li>
+                <li>Ejemplo</li>
+                <li>Ejemplo</li>
+            </ul>
         </div>
     </div>
 </body>
