Cambiado el codigo de javaScript Ahora añade elementos a la lista

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h2>Task in Progress</h2>
                 <span class="task-status">➔</span>
             </div>
-            <ul>
+            <ul id="ListInProgress">
                 <li>Ejemplo</li>
                 <li>Ejemplo</li>
                 <li>Ejemplo</li>
