Se ha añadido estilo a las tareas y se ha modifificado el script que añade taras a las listas, ahora añade las tareas con nombre de clase

--- a/Vista/index.html
+++ b/Vista/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <!--El defer del script es muy importante, descarga el script antes cargar el HMTL pero no lo usa hasta que se carge toda la interfaz-->
     <!--No borrar el Defer-->
-    <script src="controller.js" defer></script>
+    <script src="../Controlador/controller.js" defer></script>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
                 <span class="task-status">➔</span>
             </div>
             <ul id="ListInProgress">
-                <li>Ejemplo</li>
+                <li class="tarea in-progress">Ejemplo</li>
                 <li>Ejemplo</li>
                 <li>Ejemplo</li>
             </ul>
